<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="pl.michalgorny.letmeknow.ui.MainActivity">

    <TextView
        android:id="@+id/game_text_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/lets_play" />

    <com.dd.CircularProgressButton
        android:id="@+id/game_start_game"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        app:cpb_textComplete="@string/game_in_progress"
        app:cpb_textError="@string/error"
        app:cpb_textIdle="@string/start_game"
        android:textColor="@android:color/white"
        app:cpb_cornerRadius="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_above="@+id/game_start_game"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp" />

</RelativeLayout>
